[gd_scene load_steps=20 format=3 uid="uid://bv8fhnkjyxyb4"]

[ext_resource type="Script" path="res://Scripts/turret.gd" id="1_fklyn"]
[ext_resource type="Texture2D" uid="uid://dc74wybil5jg1" path="res://Assets/Textures/tileset_1.png" id="1_t6w5q"]
[ext_resource type="Texture2D" uid="uid://dywh8x3h50q5b" path="res://Assets/Particles/trace_08.png" id="2_w1ial"]
[ext_resource type="Texture2D" uid="uid://cb20lrvd6j7b2" path="res://Assets/Particles/trace_01.png" id="4_ebqvy"]
[ext_resource type="PackedScene" uid="uid://b6sqmp5g12khd" path="res://Scenes/Effects/disposable_effect_generator.tscn" id="6_wsw7v"]
[ext_resource type="Texture2D" uid="uid://c2eyyb3nuuhdm" path="res://Assets/Particles/flare_01.png" id="7_c4j3l"]
[ext_resource type="Texture2D" uid="uid://uie4xn5t2mat" path="res://Assets/Particles/muzzle_02.png" id="8_0xhes"]
[ext_resource type="PackedScene" path="res://Scenes/sound_manager.tscn" id="8_imqn2"]
[ext_resource type="PackedScene" uid="uid://bk1tjhu2is26h" path="res://Scenes/flashbang.tscn" id="8_of5b1"]
[ext_resource type="AudioStream" uid="uid://btiyk8wrx16to" path="res://Assets/Sounds/beep_1.mp3" id="9_lqx1g"]
[ext_resource type="AudioStream" uid="uid://bkisfi3lwrhfu" path="res://Assets/Sounds/robot_move_1.mp3" id="10_5lvrv"]
[ext_resource type="AudioStream" uid="uid://ubn45ptkty83" path="res://Assets/Sounds/gun_shot_1.mp3" id="10_73bdj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_30h0n"]
size = Vector2(16, 14)

[sub_resource type="Curve" id="Curve_vk681"]
max_value = 3.0
_data = [Vector2(0, 2.01779), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_c71ie"]
_data = [Vector2(0, 0.402135), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_i3u7x"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CircleShape2D" id="CircleShape2D_jc53n"]
radius = 97.0052

[sub_resource type="Curve" id="Curve_6fpl6"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.487544), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_ww7t4"]
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[node name="Turret" type="RigidBody2D"]
script = ExtResource("1_fklyn")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_30h0n")
metadata/_edit_lock_ = true

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("1_t6w5q")
region_enabled = true
region_rect = Rect2(48, 8, 16, 16)
metadata/_edit_lock_ = true

[node name="ScanLight" type="ColorRect" parent="."]
offset_left = -3.0
offset_top = -8.0
offset_right = -2.0
offset_bottom = -7.0
color = Color(100, 1, 1, 1)

[node name="Head" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("1_t6w5q")
region_enabled = true
region_rect = Rect2(64, 8, 16, 16)
metadata/_edit_lock_ = true

[node name="ShootRay" type="RayCast2D" parent="Head"]
position = Vector2(6, -3)
target_position = Vector2(500, 0)
collision_mask = 7
metadata/_edit_lock_ = true

[node name="Eye" type="ColorRect" parent="Head"]
offset_left = 2.0
offset_top = -1.0
offset_right = 4.0
color = Color(100, 0.0941176, 0.101961, 1)
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="Laser" type="PointLight2D" parent="Head"]
position = Vector2(4.00001, 0)
rotation = -1.5708
scale = Vector2(0.0477417, 1.21406)
color = Color(1, 0, 0, 1)
energy = 100.0
shadow_enabled = true
texture = ExtResource("2_w1ial")
offset = Vector2(0, 100)
metadata/_edit_lock_ = true

[node name="ShootEffect" type="CPUParticles2D" parent="Head"]
position = Vector2(91, -3)
emitting = false
amount = 30
lifetime = 0.5
one_shot = true
explosiveness = 0.8
lifetime_randomness = 0.34
texture = ExtResource("4_ebqvy")
emission_shape = 3
emission_rect_extents = Vector2(100, 1)
particle_flag_align_y = true
spread = 3.65
gravity = Vector2(0, 0)
initial_velocity_min = 95.25
initial_velocity_max = 108.76
damping_min = 62.162
damping_max = 100.0
damping_curve = SubResource("Curve_vk681")
scale_amount_min = 0.02
scale_amount_max = 0.04
scale_amount_curve = SubResource("Curve_c71ie")
color = Color(128.498, 1, 1, 1)
color_ramp = SubResource("Gradient_i3u7x")

[node name="ScanTimer" type="Timer" parent="."]

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
visible = false
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_jc53n")
metadata/_edit_lock_ = true

[node name="ReachTestRay" type="RayCast2D" parent="AttackArea"]
collision_mask = 3

[node name="ShootCooldown" type="Timer" parent="."]
one_shot = true

[node name="DisposableEffectGenerator" parent="." instance=ExtResource("6_wsw7v")]

[node name="Hit" type="CPUParticles2D" parent="DisposableEffectGenerator"]
emitting = false
amount = 1
lifetime = 5.0
one_shot = true
explosiveness = 0.81
randomness = 0.36
lifetime_randomness = 0.35
texture = ExtResource("7_c4j3l")
spread = 0.0
gravity = Vector2(0, 0)
scale_amount_min = 0.05
scale_amount_max = 0.1
scale_amount_curve = SubResource("Curve_6fpl6")
color = Color(128.498, 1, 0, 1)
color_ramp = SubResource("Gradient_ww7t4")

[node name="Flashbang" parent="DisposableEffectGenerator" instance=ExtResource("8_of5b1")]
energy = 4.17
texture = ExtResource("8_0xhes")
duration = 0.1

[node name="SoundManager" parent="." instance=ExtResource("8_imqn2")]

[node name="Misc" type="Marker2D" parent="SoundManager"]

[node name="Beep" type="AudioStreamPlayer2D" parent="SoundManager/Misc"]
stream = ExtResource("9_lqx1g")
volume_db = -10.0
max_distance = 500.0
attenuation = 5.0

[node name="GunShot_1" type="AudioStreamPlayer2D" parent="SoundManager/Misc"]
stream = ExtResource("10_73bdj")
max_distance = 500.0
attenuation = 5.0

[node name="Process" type="Marker2D" parent="SoundManager"]

[node name="Move_1" type="AudioStreamPlayer2D" parent="SoundManager/Process"]
stream = ExtResource("10_5lvrv")
max_distance = 300.0
attenuation = 5.0
